# gremlin

./: LICENSE  readme.md
lib/: Cargo.toml
lib/assets/tests/: impute.csv
lib/assets/words/adjectives/: colors.txt
lib/assets/words/nouns/: metals.txt  minerals.txt  plants.txt  wood.txt
lib/src/: bayes.rs  docs.rs  forest.rs  id.rs  lib.rs  logging.rs  probe.rs  record.rs  stats.rs  table.rs
lib/src/core/: array.rs  mod.rs  numeric.rs  series.rs  units.rs  var.rs
lib/src/data/: cache.rs  compare.rs  constrain.rs  datamap.rs  dataset.rs  defmap.rs  display.rs  error.rs  facet.rs  geotime.rs  helpers.rs  hydrate.rs  imperfect.rs  impute.rs  iterator.rs  logger.rs  mod.rs  partial.rs  profile.rs  reference.rs  river.rs  series.rs
lib/src/data/report/: diff.rs  mod.rs  util.rs  view.rs
lib/src/data/report/assets/: report.css  report.js
lib/src/draw/: mod.rs  model.rs  sampler.rs  transform.rs
lib/src/file/: mod.rs  path.rs
lib/src/plot/: mod.rs
lib/src/util/: pool.rs
macros/: Cargo.toml
macros/src/: lib.rs
