[package]
name = "gremlin"
version = "0.1.0"
edition = "2021"

[dependencies]
gremlin-macros = { path = "../macros" }
tracing = "0.1.40"
anyhow = "1.0.75"
thiserror = "1.0.50"
derive_more = "0.99.17"
serde = { version = "1.0.189", features = ["derive"] }
petname = { version = "1.1.3", default-features = false, features = ["std_rng"] }
rand = "0.8.5"
arc-swap = "1.7.0"
serde_arrays = "0.1.0"
csv = "1.3.0"
geo = { version = "=0.27.0", default-features = false }
chrono-tz = "0.8.5"
chrono = "0.4.34"
fs-err = "2.11.0"
time = { version = "0.3.31", features = ["serde", "serde-human-readable", "macros", "parsing" ] }
glob = "0.3.1"
extend = "1.2.0"
serde_yaml = "0.9.34"
enum-map = "2.7.3"

[lib]
doctest = false
