[package]
name = "gremlin"
version = "0.1.0"
edition = "2021"

[dependencies]
gremlin-macros = { path = "../macros" }
tracing = "0.1.40"
anyhow = "1.0.75"
thiserror = "1.0.50"
derive_more = "0.99.17"
serde = { version = "1.0.189", features = ["derive"] }
petname = { version = "1.1.3", default-features = false, features = ["std_rng"] }
rand = "0.8.5"
arc-swap = "1.7.0"
csv = "1.3.0"
geo = { version = "=0.27.0", default-features = false }
chrono-tz = "0.8.5"
chrono = "0.4.34"
fs-err = "2.11.0"
time = { version = "0.3.31", features = ["serde", "serde-human-readable", "macros", "parsing" ] }
glob = "0.3.1"
extend = "1.2.0"
serde_yaml = "0.9.34"
enum-map = "2.7.3"
ahash = "0.8.11"
rmp-serde = "1.1.2"
rayon = "1.10.0"
paste = "1.0.14"
serde_json = "1.0.124"
itertools = "0.13.0"
generic-array = "1.1.0"
typenum = { version = "1.17.0", features = ["const-generics"] }

rand_xoshiro = { version = "0.6.0", optional = true }
lace = { version = "0.7.0", default-features = false, optional = true }
polars = { version = "0.36.2", default-features = false, features = ["lazy", "csv", "fmt"], optional = true }

charming = { version = "0.3.1", features = ["image", "ssr"], optional = true }
image = { version = "0.25.0", optional = true }
resvg = { version = "0.40.0", default-features = false, features = ["png", "system-fonts", "text"], optional = true }
ordered-float = "4.5.0"
serde_with = "3.11.0"
comfy-table = { version = "7.1.3", optional = true }

[lib]
doctest = false

[features]
default = []
sampling = ["dep:lace"]
imputing = ["dep:polars"]
learning = ["imputing", "sampling", "dep:lace", "dep:polars", "dep:rand_xoshiro"]
plotting = ["dep:charming", "dep:image", "dep:resvg"]
console = ["dep:comfy-table"]
