[package]
name = "gremlin"
version = "0.1.0"
edition = "2021"

[dependencies]
gremlin-macros = { path = "../macros" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
thiserror = "1.0.50"
derive_more = "0.99.17"
serde = { version = "1.0.189", features = ["derive"] }
petname = { version = "2.0.2" }
rand = "0.8.5"
csv = "1.3.0"
geo = { version = "=0.27.0", default-features = false }
chrono-tz = "0.10.1"
chrono = "0.4.40"
fs-err = "2.11.0"
time = { version = "0.3.31", features = ["serde", "serde-human-readable", "macros", "parsing" ] }
glob = "0.3.1"
extend = "1.2.0"
serde_yaml = "0.9.34"
enum-map = "2.7.3"
ahash = "0.8.11"
rmp-serde = "1.1.2"
rayon = "1.10.0"
paste = "1.0.14"
serde_json = "1.0.124"
itertools = "0.13.0"
generic-array = "1.1.0"
typenum = { version = "1.17.0", features = ["const-generics"] }
hashbrown = { version = "0.14.5", features = ["raw"] }

ordered-float = "4.5.0"
serde_with = "3.11.0"
comfy-table = { version = "7.1.3" }
strum = "0.26.3"
maud = "0.26.0"
thousands = "0.2.0"
hypors = "0.2.5"
rand_distr = "0.4.3"
statrs = "0.18.0"
polars = { version = "=0.43.1", default-features = false }
palette = "0.7.6"

[lib]
doctest = false

[features]
default = []
console = []
